<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.code4africa.customcamera.customcameraapp.CameraActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    >
...
      app:layout_constraintTop_toTopOf="parent"
      />
  <ImageView
      android:id="@+id/img_overlay"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/img_capture"
      android:layout_alignParentStart="true"
      android:adjustViewBounds="false"
      android:baselineAlignBottom="false"
      android:cropToPadding="false"
      android:rotation="180"
      android:scaleType="fitXY"
...
