<resources>
  <string name="app_name">Citizen Reporter Camera</string>
  <string name="desc_take_picture">Button to take a picture</string>
  <string name="overlay_img_desc">This is the overlay image</string>
  <string name="swipe_text">Swipe to change scenes</string>

  <string name="title_activity_view_image">View Image</string>
  <string name="portrait_scene">Portrait</string>
  <string name="interaction_scene">Interaction Scene</string>
  <string name="scene_changer_text">Swipe to change scenes</string>
  <string name="recording_status">Recording video</string>
</resources>
