...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:alpha="0.5"
      tools:layout_editor_absoluteY="435dp"
      />
  <ImageView
      android:id="@+id/img_save_btn"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="16dp"
      android:clickable="true"
      app:layout_constraintBottom_toBottomOf="parent"
...
