package com.code4africa.customcamera.customcameraapp;

import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class CameraActivityTest {

	@Rule
	public ActivityTestRule<CameraActivity> mActivityTestRule =
			new ActivityTestRule<>(CameraActivity.class);

	@Test
	public void cameraActivityTest() {
		ViewInteraction appCompatImageView = onView(
				allOf(withId(R.id.img_capture), withContentDescription("Button to take a picture"),
						childAtPosition(
								allOf(withId(R.id.root_container),
										childAtPosition(
												withId(android.R.id.content),
												0)),
								10),
						isDisplayed()));
		appCompatImageView.perform(click());

		ViewInteraction appCompatImageView2 = onView(
				allOf(withId(R.id.img_capture), withContentDescription("Button to take a picture"),
						childAtPosition(
								allOf(withId(R.id.root_container),
										childAtPosition(
												withId(android.R.id.content),
												0)),
								10),
						isDisplayed()));
		appCompatImageView2.perform(click());

		ViewInteraction appCompatImageView3 = onView(
				allOf(withId(R.id.img_save_btn),
						childAtPosition(
								childAtPosition(
										withId(android.R.id.content),
										0),
								2),
						isDisplayed()));
		appCompatImageView3.perform(click());
	}

	private static Matcher<View> childAtPosition(
			final Matcher<View> parentMatcher, final int position) {

		return new TypeSafeMatcher<View>() {
			@Override
			public void describeTo(Description description) {
				description.appendText("Child at position " + position + " in parent ");
				parentMatcher.describeTo(description);
			}

			@Override
			public boolean matchesSafely(View view) {
				ViewParent parent = view.getParent();
				return parent instanceof ViewGroup && parentMatcher.matches(parent)
						&& view.equals(((ViewGroup) parent).getChildAt(position));
			}
		};
	}
}
